--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,185 @@
-pip install mojito
+absl-py==2.1.0
+altair==5.3.0
+annotated-types==0.7.0
+anyio==4.4.0
+astropy==6.0.0
+astropy-iers-data==0.2024.2.19.0.28.47
+asttokens==2.4.1
+astunparse==1.6.3
+attrs==23.2.0
+bcrypt==4.2.1
+beautifulsoup4==4.12.3
+blinker==1.8.2
+bs4==0.0.2
+CacheControl==0.14.0
+cachetools==5.4.0
+certifi==2023.11.17
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.1.1
+cmake==3.28.1
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.0
+cryptography==43.0.1
+cycler==0.12.1
+debugpy==1.8.2
+decorator==5.1.1
+distro==1.9.0
+dm-tree==0.1.8
+executing==2.0.1
+Farama-Notifications==0.0.4
+filelock==3.17.0
+finance-datareader==0.9.96
+firebase-admin==6.5.0
+Flask==3.0.3
+flatbuffers==23.5.26
+fonttools==4.47.2
+fsspec==2025.2.0
+gast==0.5.4
+gitdb==4.0.11
+GitPython==3.1.43
+google-api-core==2.20.0
+google-api-python-client==2.146.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.18.0
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-pasta==0.2.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
+greenlet==3.0.3
+grpcio==1.66.1
+grpcio-status==1.66.1
+gym==0.26.2
+gym-notices==0.0.8
+gymnasium==1.0.0
+h11==0.14.0
+h5py==3.10.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+idna==3.6
+ipykernel==6.29.5
+ipython==8.26.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.3.2
+jplephem==2.21
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+keras==3.0.5
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.5
+libclang==16.0.6
+lxml==5.3.1
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml-dtypes==0.3.2
+mojito2==0.1.6
+mpmath==1.3.0
+msgpack==1.1.0
+mysql-connector-python==9.2.0
+namex==0.0.7
+narwhals==1.24.1
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==1.26.3
+openai==1.35.13
+opencv-python==4.9.0.80
+opt-einsum==3.3.0
+packaging==23.2
+Panda3D==1.10.14
+pandas==2.2.2
+parso==0.8.4
+pillow==10.2.0
+platformdirs==4.2.2
+plotly==6.0.0
+prompt_toolkit==3.0.47
+proto-plus==1.24.0
+protobuf==5.28.2
+psutil==6.0.0
+pure-eval==0.2.2
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pycryptodome==3.21.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+pyerfa==2.0.1.1
+pygame==2.5.2
+Pygments==2.17.2
+PyJWT==2.9.0
+pyparsing==3.1.1
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
+python-dateutil==2.8.2
+pytz==2024.1
+pywin32==306
+PyYAML==6.0.1
+pyzmq==26.0.3
+referencing==0.35.1
+regex==2024.5.15
+requests==2.31.0
+requests-file==2.1.0
+rich==13.7.0
+rpds-py==0.19.0
+rsa==4.9
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+seaborn==0.13.2
+setuptools==69.0.3
+sgp4==2.23
+Shimmy==2.0.0
+six==1.16.0
+skyfield==1.48
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.31
+stable_baselines3==2.5.0
+stack-data==0.6.3
+streamlit==1.36.0
+sympy==1.13.1
+tenacity==8.5.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow-intel==2.16.0rc0
+termcolor==2.4.0
+threadpoolctl==3.3.0
+tiktoken==0.7.0
+toml==0.10.2
+toolz==0.12.1
+torch==2.6.0
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+traits==6.4.3
+typing_extensions==4.12.2
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==2.1.0
+vtk==9.3.0
+watchdog==4.0.1
+wcwidth==0.2.13
+websockets==14.2
+Werkzeug==3.0.1
+wheel==0.42.0
+wordcloud==1.9.4
+wrapt==1.16.0
+xlrd==2.0.1
+xlwt==1.3.0
