--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ pandas==2.2.2
 finance-datareader==0.9.96
 supabase==2.13.0
 python-dotenv==1.0.1
+langchain
+langchain-core
+langchain-google-genai
+google-generativeai
+openai
+tiktoken
