--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,4 @@ streamlit==1.36.0
 pandas==2.2.2
 finance-datareader==0.9.96
 supabase==2.13.0
-langchain
-langchain-core
-langchain-google-genai
-google-generativeai
-openai
-tiktoken
+python-dotenv==1.0.1
