--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,7 @@ pandas==2.2.2
 finance-datareader==0.9.96
 supabase==2.13.0
 python-dotenv==1.0.1
-langchain
-langchain-core
-langchain-google-genai
-google-generativeai
-openai
-tiktoken
-langchain-openai
+langchain==0.3.7
+langchain-core==0.3.51
+openai==1.72.0
+langchain-openai==0.3.12
