--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ langchain-core==0.3.51
 langchain-openai==0.3.12
 openai==1.72.0
 langchain-google-genai
-cachetools==5.3.2
+reportlab==4.1.0
+fpdf==1.7.2
