fix: requirements에 fredapi 추가, fred api key 추가

--- a/.github/workflows/collect_economic_data.yml
+++ b/.github/workflows/collect_economic_data.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Run fetch script
         env:
           ECOS_API_KEY: ${{ secrets.ECOS_API_KEY }}
+          FRED_API_KEY: ${{ secrets.FRED_API_KEY }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: python run_collector.py
