--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,1 @@
-remote_theme: just-the-docs/just-the-docs
-title: Asset Management Dashboard
-description: 스마트한 자산 관리를 위한 올인원 솔루션
-encoding: UTF-8
-timezone: Asia/Seoul
-
-# SEO 관련 설정
-lang: ko
-author: Asset Management Team
-keywords: 자산관리, 포트폴리오, ETF분석, AI챗봇
-
-# Just the Docs 테마 설정
-color_scheme: dark
-search_enabled: true
-heading_anchors: true
-
-# 소셜 미디어 설정
-github:
-  is_project_page: true
-  repository_url: https://github.com/kookmin-sw/capstone-2024-14
+theme: jekyll-theme-slate
