--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ langchain==0.3.7
 langchain-core==0.3.51
 langchain-openai==0.3.12
 openai==1.72.0
-langchain-google-genai
+langchain-google-genai==2.1.0
 reportlab==4.1.0
 fredapi==0.5.1
 fpdf==1.7.2
