fix: SUPABASE키 삽입

--- a/.github/workflows/send_email.yml
+++ b/.github/workflows/send_email.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Run fetch script
         env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
         run: python email_sender.py
