fix: GEMINI_KEY 추가

--- a/.github/workflows/send_email.yml
+++ b/.github/workflows/send_email.yml
@@ -25,6 +25,7 @@ jobs:
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
         run: python email_sender.py
